--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ExpressionsDatabaseSettings": {
     "ExpressionsCollectionName": "solvedExpressions",
-    "ConnectionString": "mongodb+srv://trrenty:0aehkUKDe09kDIwr@cluster0.kkkib.mongodb.net/expressions?retryWrites=true&w=majority",
+    "ConnectionString": "mongodb+srv://user:passwd@cluster0.kkkib.mongodb.net/expressions?retryWrites=true&w=majority",
     "DatabaseName": "expressions"
   },
   "Logging": {
